--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             </marquee>
         </h1>
         <hr>
-        <a href="image.html" target="default">Image Page</a><br>
-        <a href="anchor.html" target="default">Anchor Tag Page</a><br>
-        <a href="List.html" target="default">Listing Tag Page</a><br>
-        <a href="marquee.html" target="default">Marquee Tag Page</a><br>
+        <a href="./image.html" target="default">Image Page</a><br>
+        <a href="./anchor.html" target="default">Anchor Tag Page</a><br>
+        <a href="./List.html" target="default">Listing Tag Page</a><br>
+        <a href="./marquee.html" target="default">Marquee Tag Page</a><br>
         
     </body>
 </html>
