--- a/image.html
+++ b/image.html
@@ -23,41 +23,41 @@
         <hr>
         <h2 align="center"><a name="Blue Sky"><b><u>Blue Sky</u></b></a></h2>
         <a href="#top">Top</a>
-        <img width="100%" src="image/Screenshot 2024-05-20 184521.png" alt="Image of Blue Sky" title="Blue Sky"/>
+        <img width="100%" src="./image/Screenshot 2024-05-20 184521.png" alt="Image of Blue Sky" title="Blue Sky"/>
         <br>
         
         <br><br><hr><br>
         <h2 align="center"><a name="Red Rose"><b><u>Red Rose</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/418494700_1107884866903242_8949529861229262487_n.png" alt="Image of Red Rose" title="Red Rose"/>
+        <img width="100%" src="./image/418494700_1107884866903242_8949529861229262487_n.png" alt="Image of Red Rose" title="Red Rose"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Waretmelon Art"><b><u>Waretmelon Art</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/420103101_333049033025833_4015105003290914432_n.jpg" alt="Image of Waretmelon Art" title="Waretmelon Art"/>
+        <img width="100%" src="./image/420103101_333049033025833_4015105003290914432_n.jpg" alt="Image of Waretmelon Art" title="Waretmelon Art"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Beautiful Palace"><b><u>Beautiful Palace</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/5573572.jpg" alt="Image of Beautiful Palace" title="Beautiful Palace"/>
+        <img width="100%" src="./image/5573572.jpg" alt="Image of Beautiful Palace" title="Beautiful Palace"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Cute Naruto"><b><u>Cute Naruto</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/naruto-uzumaki-3840x2160-12705.jpg" alt="Image of Cute Naruto" title="Cute Naruto"/>
+        <img width="100%" src="./image/naruto-uzumaki-3840x2160-12705.jpg" alt="Image of Cute Naruto" title="Cute Naruto"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Naruto With Kurama"><b><u>Naruto With Kurama</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/nu.jpg" alt="Image of Naruto With Kurama" title="Naruto With Kurama"/>
+        <img width="100%" src="./image/nu.jpg" alt="Image of Naruto With Kurama" title="Naruto With Kurama"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Team 7"><b><u>Team 7</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/t7.jpg" alt="Image of Team 7" title="Team 7"/>
+        <img width="100%" src="./image/t7.jpg" alt="Image of Team 7" title="Team 7"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Ananya Pandey"><b><u>Ananya Pandey</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/WhatsApp Image 2023-10-01 at 8.05.02 AM.jpeg" alt="Image of Ananya Pandey" title="Ananya Pandey"/>
+        <img width="100%" src="./image/WhatsApp Image 2023-10-01 at 8.05.02 AM.jpeg" alt="Image of Ananya Pandey" title="Ananya Pandey"/>
         <br><br><hr><br>
         <h2 align="center"><a name="Cute Humming Bird"><b><u>Cute Humming Bird</u></b></a></h2>
         <br><a href="#top">Top</a>
-        <img width="100%" src="image/WhatsApp Image 2023-10-01 at 8.05.07 AM.jpeg" alt="Image of Cute Humming Bird" title="Cute Humming Bird"/>
+        <img width="100%" src="./image/WhatsApp Image 2023-10-01 at 8.05.07 AM.jpeg" alt="Image of Cute Humming Bird" title="Cute Humming Bird"/>
         <br><br><hr> 
         <a href="anchor.html">Anchor Tag</a>
         <br><a href="#top">Top</a>
